--- a/Exp_2/Example1/app/src/main/res/values/strings.xml
+++ b/Exp_2/Example1/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">Hello World</string>
+    <string name="app_name">HelloWorldApp</string>
+    <string name="hello_world">Hello World!</string>
+    <string name="goodbye_world">Goodbye World!</string>
+    <string name="menu_change_text">Change Text</string>
 </resources>
